Fix modal spacing and add customer login button

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,7 +17,7 @@
 }
 
 .header__logo {
-  font-size: 32px;
+  font-size: 48px;
   font-weight: 900;
   color: #000000;
   text-decoration: none;
